@@ -12,11 +12,20 @@ typedef double timestamp;
 typedef double TimestampTz;
 #endif
 
+#ifdef __cplusplus
+extern          "C"
+{
+#endif
+
 extern timestamp PGTYPEStimestamp_from_asc(char *, char **);
 extern char *PGTYPEStimestamp_to_asc(timestamp);
 extern int	PGTYPEStimestamp_sub(timestamp *, timestamp *, interval *);
 extern int	PGTYPEStimestamp_fmt_asc(timestamp *, char *, int, char *);
 extern void PGTYPEStimestamp_current(timestamp *);
 extern int	PGTYPEStimestamp_defmt_asc(char *, char *, timestamp *);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif   /* PGTYPES_TIMESTAMP */
